<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">KidStart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_here">Sign up here.</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login_instead">Login instead.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign up.</string>
    <string name="login">Login</string>
    <string name="asset_statements" translatable="false">[{ \"include\": \"https://kidstart.web.app/.well-known/assetlinks.json\" }]</string>
    <string name="first_name">First name</string>
    <string name="create_a_new_account">Create a new account.</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="phone_number_optional">Phone number (optional)</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

    <!-- Profile -->
    <string name="edit_profile_text">Edit Profile</string>
    <string name="apply_edit_profile_text">Apply</string>
    <string name="profile_preferences_header">Preferences</string>
    <string name="age_preference_label">Age Group</string>
    <string name="distance_preference_label">Distance</string>
    <string name="profile_interests_header">Interested Categories</string>
    <string name="placeholder_profile_name">First Last</string>
    <string name="placeholder_profile_email">name@email.com</string>
    <string-array name="age_array">
        <item name="1to3" tools:ignore="TypographyDashes">0-3 years (Toddler)</item>
        <item name="3to5" tools:ignore="TypographyDashes">3-6 years (Preschool)</item>
        <item name="5to8" tools:ignore="TypographyDashes">7-12 years (Early Elementary)</item>
        <item name="8to12" tools:ignore="TypographyDashes">10-13 Years (Late Elementary)</item>
    </string-array>
    <string-array name="distance_array">
        <item name="close" tools:ignore="TypographyDashes">0-10km</item>
        <item name="medium" tools:ignore="TypographyDashes">0-20km</item>
        <item name="far" tools:ignore="TypographyDashes">0-40km</item>
        <item name="very far" tools:ignore="TypographyDashes">0-80km</item>
    </string-array>
    <string name="add_interest_text">Add Interest</string>
    <string name="settings_header">Account and App Settings</string>
    <!-- I apologize but none of these can be longer than like 20 characters -->
    <string name="account_management_header">Account Management</string>
    <string name="account_management_description">Change email and password.</string>
    <string name="notifications_header">Notifications</string>
    <string name="notifications_description">Manage push alerts and emails.</string>
    <string name="help_header">Help and Support</string>
    <string name="help_description">FAQ and app guide.</string>
    <!-- -->
    <string name="logout_label">Logout of Kidstart</string>
    <string name="empty_username_snack">Profile name not changed (empty.)</string>

    <!-- Interest Categories -->
    <string name="science_interest_title">Science</string>
    <string name="science_interest_description">Chemistry, biology, and physics camps and clubs.</string>
    <string name="art_interest_title">Art</string>
    <string name="art_interest_description">Painting, drawing, and sculpting camps and classes.</string>
    <string name="computers_interest_title">Computers</string>
    <string name="computers_interest_description">Coding and robotics camps and classes.</string>
    <string name="music_interest_title">Music</string>
    <string name="music_interest_description">Classical and modern music camps and classes.</string>
    <string name="sports_interest_title">Sports</string>
    <string name="sports_interest_description">Indoor and outdoor camps and teams.</string>
    <string name="reading_interest_title">Reading</string>
    <string name="reading_interest_description">Book clubs and library events.</string>
</resources>