<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".model.LoginFragment">
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcome_text"
        style="@style/TextAppearance.Material3.TitleLarge.Emphasized"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome to KidStart" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/subtitle_text"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign in to get started." />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorIconDrawable="@null"
        android:textAlignment="center"
        android:hint="Email">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email_input"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/account_subtitle"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sign_up"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_primary"
        android:text="@string/sign_up_here"
        />

</LinearLayout>